--- a/kitty_font.conf
+++ b/kitty_font.conf
@@ -1,7 +1,7 @@
-font_family      OperatorMonoLig Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      Operator Mono Lig Light
+bold_font        Operator Mono Lig Book
+italic_font      Operator Mono Lig Light Italic
+bold_italic_font Operator Mono Lig Book Italic
 
 font_size 12.0
 
