--- a/kitty_font.conf
+++ b/kitty_font.conf
@@ -1,8 +1,8 @@
-font_family      Operator Mono Lig Light
-bold_font        Operator Mono Lig Book
-italic_font      Operator Mono Lig Light Italic
-bold_italic_font Operator Mono Lig Book Italic
+font_family      Fira Code Retina
+bold_font        Fira Code Bold
+italic_font      Fira Code Retina Italic
+bold_italic_font Fira Code Bold Italic
 
-font_size 12.0
+font_size 14.0
 
 disable_ligatures never
