--- a/kitty_font.conf
+++ b/kitty_font.conf
@@ -1,8 +1,8 @@
-font_family      Fira Code Retina
+font_family      Fira Code
 bold_font        Fira Code Bold
-italic_font      Fira Code Retina Italic
-bold_italic_font Fira Code Bold Italic
+italic_font      IBMPlexMono Medium Italic
+bold_italic_font IBMPlexMono Bold Italic
 
-font_size 14.0
+font_size 10.0
 
 disable_ligatures never
