--- a/kitty_font.conf
+++ b/kitty_font.conf
@@ -1,8 +1,8 @@
-font_family      Fantasque Sans Mono
+font_family      FantasqueSansMono Nerd Font
 bold_font        Fantasque Sans Mono Bold
 italic_font      Fantasque Sans Mono Italic
-bold_italic_font Fantasque Sans Mono Italic
+bold_italic_font Fantasque Sans Mono Bold Italic
 
-font_size 12.0
+font_size 14.0
 
 disable_ligatures never
