--- a/kitty_font.conf
+++ b/kitty_font.conf
@@ -1,7 +1,7 @@
-font_family      FantasqueSansMono Nerd Font
-bold_font        Fantasque Sans Mono Bold
-italic_font      Fantasque Sans Mono Italic
-bold_italic_font Fantasque Sans Mono Bold Italic
+font_family      FantasqueSansMonoNerdFontComplete-Regular
+bold_font        FantasqueSansMonoNerdFontComplete-Bold
+italic_font      FantasqueSansMonoNerdFontComplete-Italic
+bold_italic_font FantasqueSansMonoNerdFontComplete-Bold Italic
 
 font_size 14.0
 
